Fix gap in top of view

--- a/styles/expose.less
+++ b/styles/expose.less
@@ -2,10 +2,11 @@
 
 /* Layout */
 
-atom-panel.modal.expose-panel {
+atom-panel.modal.expose-panel.from-top {
   position: fixed;
   left: 0;
   margin: auto;
+  top: 0;
   padding-top: 0;
   width: 100%;
   max-width: 100%;
